Fixes and improvements

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "portfolio",
     "react",
     "webpack",
-    "typeScript"
+    "typescript"
   ],
   "author": "Naftan <me@naftan.dev>",
   "license": "ISC",
